--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Etch-a-Sketch</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <h1>ETCH-A-SKETCH</h1>
+    <main class = "container">
+
+    </main>
+    <div class = "bottomDiv" id = "bottomDiv">
+        <button class="reset" id = "reset">RESET</button>
+        <input type="color" class = "colorPicker" id = "colorPicker"></input>
+    </div>
 </body>
+<script src="script.js"></script>
 </html>
